<!-- res/menu/menu_second.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/iconHome"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/guest_iconHome"
        app:showAsAction="always" />

    <item
        android:id="@+id/itemAccount"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/guest_itemAccount"
        app:showAsAction="always" />

    <item
        android:id="@+id/itemReservationView"
        android:title="@string/guest_itemReservationView"
        app:showAsAction="never" />

    <item
        android:id="@+id/itemAccomodationView"
        android:title="@string/guest_itemAccomodationView"
        app:showAsAction="never" />

    <item
        android:id="@+id/itemNotificationsView"
        android:title="@string/guest_itemNotificationsView"
        app:showAsAction="never" />

</menu>